--- a/GeoStore/package.json
+++ b/GeoStore/package.json
@@ -14,6 +14,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "terraformer": "*"
+    "terraformer": "https://github.com/nixta/Terraformer/archive/nixta-dist-node.tar.gz"
   }
 }
