--- a/Parsers/ArcGIS/package.json
+++ b/Parsers/ArcGIS/package.json
@@ -21,7 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "terraformer": "*"
+    "terraformer": "https://github.com/nixta/Terraformer/archive/nixta-dist-node.tar.gz"
   },
   "devDependencies": {
     "vows": "~0.7.0"
