--- a/RTree/package.json
+++ b/RTree/package.json
@@ -11,7 +11,7 @@
     "vows": "~0.7.0"
   },
   "dependencies": {
-    "terraformer": "*"
+    "terraformer": "https://github.com/nixta/Terraformer/archive/nixta-dist-node.tar.gz"
   },
   "author": "",
   "license": "MIT"
